Do not initialize arrays in BigArrays if clear is false